--- a/TerceiroProjeto/css/estilo.css
+++ b/TerceiroProjeto/css/estilo.css
@@ -22,7 +22,7 @@ p{
 h1, h2, h3, h4, h5, h6{
     color: #787878;
     font-weight: normal;
-    margin: 0 0 1em 0;
+    margin: 1em 0;
 }
 
 h1{
@@ -73,6 +73,99 @@ code{
 pre code{
     display: block;
 }
+
+ul, ol{
+    margin: 0;
+    padding: 0;
+    padding-left: 1.1em;
+}
+
+li{
+    padding-left: .5em;
+}
+
+.ul-alternate{
+    list-style-type: none;
+}
+
+.ul-alternate li{
+    border-bottom: 2px solid #d8d8d8;
+    padding-left: 0;
+}
+
+.ul-alternate li:last-child{
+    border: 0;
+}
+
+.ul-icons{
+    border-bottom: 2px solid #d8d8d8;
+    padding-left: 0;
+}
+
+.ul-icons li{
+    display: inline-block;
+    font-size: 1.5em;
+    color: #49bf9d;
+}
+
+.button-default{
+    background-color: #49bf9d;
+    border: 2px solid #49bf9d;
+    color: white;
+    padding: 0.45em 1.1em;
+    border-radius: 9px;
+    font-size: 1.2em;
+    display: inline-block;
+}
+
+.button-default-stroke{
+    background-color: white;
+    border-color: #efefef;
+    color: inherit;
+}
+
+.button-default-small{
+    font-size: 0.95em;
+}
+
+.button-default-full{
+    display: block;
+}
+
+.table{
+    width: 100%;
+    margin:  0 0 2em 0;
+    border-collapse: collapse;
+    text-align: left;
+}
+
+.table td{
+    padding: .75em;
+}
+
+.table th{
+    background:  #ccc;
+    padding: .75em;
+}
+
+.table tbody tr td{
+    border-bottom: 1px solid #ccc;
+}
+.table tbody tr:first-child td{
+    border-top: 2px solid #666;
+}
+
+.table tbody tr:last-child td{
+    border-top: 2px solid #666;
+}
+
+.table tbody tr:nth-child(even) td{
+    background: #eee;
+}
+
+.table-alternate tbody td, .table-alternate tbody tr:first-child td, .table-alternate tbody tr:last-child td{
+    border: 1px solid #ddd;
+}
 .main-header{
     position: fixed;
     top: 0;
@@ -111,4 +204,13 @@ pre code{
     margin-left: 35%;
     padding: 124px 54px 72px;
     box-sizing: border-box;
+}
+
+.row{
+    overflow: auto;
+}
+
+.col-2{
+    width: 50%;
+    float: left;
 }
