--- a/TerceiroProjeto/css/estilo.css
+++ b/TerceiroProjeto/css/estilo.css
@@ -19,6 +19,9 @@ p{
     margin: 0 0 2em;
 }
 
+img{
+    max-width: 100%;
+}
 h1, h2, h3, h4, h5, h6{
     color: #787878;
     font-weight: normal;
@@ -59,6 +62,10 @@ blockquote{
     padding: .5em 0 .5em 1.5em;
 }
 
+blockquote p{
+    margin-bottom: 0.5em;
+}
+
 code{
     background: #f7f7f7;
     border-radius: .35em;
@@ -84,6 +91,13 @@ li{
     padding-left: .5em;
 }
 
+.hidden{
+    display: block;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    visibility: hidden;
+}
 .ul-alternate{
     list-style-type: none;
 }
@@ -97,25 +111,97 @@ li{
     border: 0;
 }
 
-.ul-icons{
+.ul-icons:last-child{
     border-bottom: 2px solid #d8d8d8;
     padding-left: 0;
 }
 
-.ul-icons li{
+.ul-icons:last-child li{
     display: inline-block;
     font-size: 1.5em;
     color: #49bf9d;
 }
 
+.ul-icons:first-child{
+    text-decoration: none;
+}
+
+.ul-icons:first-child li{
+    display: inline-block;
+}
+
+.ul-icons:first-child a{
+   border-bottom: none;
+}
+.icon-link{
+    display: inline-block;
+    color: #787878;
+    font-size: 1.5em;
+    margin-right: 10px;
+}
+
+.copyright{
+    display: inline-block;
+    font-size: 13px;
+    color: #787878;
+}
+
+.copyright li{
+    list-style: none;
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.copyright a{
+    color: #787878;
+    font-size: 13px;
+}
+
+input, label, textarea, select{
+    display: inline-block;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+input[type="radio"], input[type="checkbox"]{
+    width: auto;
+}
+input, textarea, select{
+    background: #ccc;
+    padding: 15px;
+    border-radius: 5px;
+    border: none;
+    margin-bottom: 15px;
+    border:  2px solid transparent;
+}
+
+textarea{
+    height: 150px;
+}
+input:focus, textarea:focus{
+    border: 2px solid #49bf9d;
+    outline: none;
+}
+
+.image-link{
+    border: 0;
+}
 .button-default{
     background-color: #49bf9d;
-    border: 2px solid #49bf9d;
+    border: 3px solid #49bf9d;
     color: white;
     padding: 0.45em 1.1em;
     border-radius: 9px;
     font-size: 1.2em;
     display: inline-block;
+    width: auto;
+    transition: all .5s;
+    cursor: pointer;
+}
+
+.button-default:hover{
+    background-color: #54d6b1;
+    border-color: transparent;
 }
 
 .button-default-stroke{
@@ -124,6 +210,11 @@ li{
     color: inherit;
 }
 
+.button-default-stroke:hover{
+    color: #49bf9d;
+    border-color: #49bf9d;
+    background-color: white;
+}
 .button-default-small{
     font-size: 0.95em;
 }
@@ -167,6 +258,7 @@ li{
     border: 1px solid #ddd;
 }
 .main-header{
+    text-align: right;
     position: fixed;
     top: 0;
     left: 0;
@@ -188,6 +280,12 @@ li{
     color: rgba(255, 255, 255, .5);
 }
 
+.main-header-p{
+    font-size: 1em;
+    text-align: right;
+    color: rgba(255, 255, 255, 0.719);
+}
+
 .main-header-link{
     color: inherit;
 }
@@ -206,11 +304,86 @@ li{
     box-sizing: border-box;
 }
 
+.main-header-link img{
+    border-radius: 50%;
+    overflow: hidden;
+}
+.recent-works-card img{
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.gallery-img{
+
+}
+.gallery-img img{
+    width: 100%;
+
+}
+
+.gallery-thumb{
+
+}
+
+.gallery-thumb img, .gallery-img img{
+    margin-bottom: 2%;
+    display: inline-block;
+    border-radius: 5px;
+}
+
+.main-footer{
+    text-align: right;
+    position: fixed;
+    bottom: 300px;
+    width: 35%;
+    left: 0;
+    padding: 0px 54px 72px 0;
+    box-sizing: border-box;
+
+}
+
+.main-footer ul{
+    margin-top: 10px;
+}
+/* GRID */
 .row{
     overflow: auto;
 }
 
 .col-2{
-    width: 50%;
+    width: 48.5%;
     float: left;
+}
+
+.col-2:first-child{
+    margin-right: 1.5%;
+}
+
+.col-2:last-child{
+    margin-left: 1.5%;
+}
+.col-2-3{
+    width: 66%;
+    float: left;
+}
+
+.col-1-3{
+    width: 32%;
+    float: left;
+}
+
+.col-1-3:nth-child(3n - 2){
+    margin-right: 2%;
+}
+
+.col-1-3:nth-child(3n){
+    margin-left: 2%;
+}
+
+.col-2-3 + .col-1-3{
+    margin-left: 2%;
+}
+
+.col-1-3 + .col-2-3{
+    margin-left: 2%;
 }
